android-s.txt
1) -n "out"     -d "out/soong/build.ninja.d"     -t -l out/.module_paths/Android.bp.list -globFile out/soong/.bootstrap/build-globs.ninja -o out/soong/build.ninja --available_env out/soong/soong.environment.available --used_env out/soong/soong.environment.used Android.bp
error: build/soong/java/core-libraries/Android.bp:130:1: module "legacy.core.platform.api.stubs" already defined
       libcore/mmodules/core_platform_api/Android.bp:55:1 <-- previous definition here
error: build/soong/java/core-libraries/Android.bp:146:1: module "stable.core.platform.api.stubs" already defined
       libcore/mmodules/core_platform_api/Android.bp:71:1 <-- previous definition here
error: build/soong/java/core-libraries/Android.bp:164:1: module "legacy-core-platform-api-stubs-system-modules" already defined
       libcore/mmodules/core_platform_api/Android.bp:89:1 <-- previous definition here
error: build/soong/java/core-libraries/Android.bp:180:1: module "stable-core-platform-api-stubs-system-modules" already defined
       libcore/mmodules/core_platform_api/Android.bp:105:1 <-- previous definition here
error: libcore/JavaLibrary.bp:1021:1: module "core.current.stubs" already defined
       build/soong/java/core-libraries/Android.bp:27:1 <-- previous definition here
error: libcore/JavaLibrary.bp:1042:1: module "core-current-stubs-for-system-modules" already defined
       build/soong/java/core-libraries/Android.bp:48:1 <-- previous definition here
error: libcore/JavaLibrary.bp:1068:1: module "core-current-stubs-system-modules" already defined
       build/soong/java/core-libraries/Android.bp:74:1 <-- previous definition here
error: libcore/JavaLibrary.bp:1080:1: module "core.module_lib.stubs" already defined
       build/soong/java/core-libraries/Android.bp:86:1 <-- previous definition here
error: libcore/JavaLibrary.bp:1097:1: module "core-module-lib-stubs-system-modules" already defined
       build/soong/java/core-libraries/Android.bp:103:1 <-- previous definition here
05:03:29 soong bootstrap failed with: exit status 1

solution commit msg: Move modules containing ART, conscrypt and i18n to build/soong 

2) error: external/rust/crates/zip/Android.bp:21:1: "libzip" depends on undefined module "libflate2"
05:15:20 soong bootstrap failed with: exit status 1

clone git clone https://android.googlesource.com/platform/external/rust/crates/flate2

3) error: packages/modules/DnsResolver/Android.bp:381:1: "libdoh_ffi_for_test" depends on undefined module "libbase64_rust"
error: packages/modules/DnsResolver/Android.bp:323:1: "libdoh_ffi" depends on undefined module "libbase64_rust"
05:48:59 soong bootstrap failed with: exit status 1

4) error: packages/modules/Virtualization/microdroid_manager/Android.bp:32:1: "microdroid_manager_test" depends on undefined module "libkernlog"
error: packages/modules/Virtualization/microdroid_manager/Android.bp:27:1: "microdroid_manager" depends on undefined module "libkernlog"

5) error: packages/modules/Virtualization/virtualizationservice/Android.bp:47:1: "virtualizationservice" depends on undefined module "libcommand_fds"
error: packages/modules/Virtualization/virtualizationservice/Android.bp:53:1: "virtualizationservice_device_test" depends on undefined module "libcommand_fds"

3 and 4 are rust dependencies can be cloned from here https://android.googlesource.com/platform/external/rust/crates/


6) FAILED: /home/hpnightowl/404/out/soong/.intermediates/vendor/404/build/soong/generated_kernel_includes/gen/.dummy_dep
/home/hpnightowl/404/out/soong/host/linux-x86/bin/sbox --sandbox-path /home/hpnightowl/404/out/soong/.temp --output-root /home/hpnightowl/404/out/soong/.in>
flag provided but not defined: -output-root
Usage: sbox --manifest <manifest> --sandbox-path <sandboxPath>
  -keep-out-dir
        whether to keep the sandbox directory when done
  -manifest string
        textproto manifest describing the sandboxed command(s)
  -sandbox-path string
        root of temp directory to put the sandbox int

pick : [under review] https://review.lineageos.org/c/LineageOS/android_vendor_lineage/+/317189

7) hardware/qcom-caf/wlan/qcwcn/wpa_supplicant_8_lib/driver_cmd_nl80211.c:67:47: error: too few arguments to function call, expected 6, have 4
        ret = send_and_recv_msgs(drv, msg, NULL, NULL);
              ~~~~~~~~~~~~~~~~~~                     ^
external/wpa_supplicant_8/src/drivers/driver_nl80211.h:247:5: note: 'send_and_recv_msgs' declared here
int send_and_recv_msgs(struct wpa_driver_nl80211_data *drv, struct nl_msg *msg,
    ^
hardware/qcom-caf/wlan/qcwcn/wpa_supplicant_8_lib/driver_cmd_nl80211.c:123:47: error: too few arguments to function call, expected 6, have 4
        ret = send_and_recv_msgs(drv, msg, NULL, NULL);
              ~~~~~~~~~~~~~~~~~~                     ^
external/wpa_supplicant_8/src/drivers/driver_nl80211.h:247:5: note: 'send_and_recv_msgs' declared here
int send_and_recv_msgs(struct wpa_driver_nl80211_data *drv, struct nl_msg *msg,
    ^
hardware/qcom-caf/wlan/qcwcn/wpa_supplicant_8_lib/driver_cmd_nl80211.c:161:47: error: too few arguments to function call, expected 6, have 4
        ret = send_and_recv_msgs(drv, msg, NULL, NULL);
              ~~~~~~~~~~~~~~~~~~                     ^
external/wpa_supplicant_8/src/drivers/driver_nl80211.h:247:5: note: 'send_and_recv_msgs' declared here
int send_and_recv_msgs(struct wpa_driver_nl80211_data *drv, struct nl_msg *msg,
    ^
hardware/qcom-caf/wlan/qcwcn/wpa_supplicant_8_lib/driver_cmd_nl80211.c:1847:65: error: too few arguments to function call, expected 6, have 4
        ret = send_and_recv_msgs(drv, msg, thermal_info_handler, result);
              ~~~~~~~~~~~~~~~~~~                                       ^
external/wpa_supplicant_8/src/drivers/driver_nl80211.h:247:5: note: 'send_and_recv_msgs' declared here
int send_and_recv_msgs(struct wpa_driver_nl80211_data *drv, struct nl_msg *msg,


pick : https://github.com/Project-Fluid-Testing/hardware_qcom_wlan/commit/8b16a3b4c09fc72f8cd05fe3c4bcafbb8d1a5b67

